# Preenche credenciais admin quando os inputs estao visiveis
appId: host.exp.exponent
---

- tapOn:
    id: "input-email"
- eraseText
- inputText: "admin@email.com"

- tapOn:
    id: "input-senha"
- eraseText
- inputText: "123456"
