# Subflow reutilizavel: Login como cliente
# Deve ser chamado a partir de um fluxo principal com app iniciado
appId: host.exp.exponent
---

- runFlow:
    when:
      visible:
        id: "input-email"
    file: ./fill-customer-credentials.yaml

- hideKeyboard

- tapOn:
    id: "btn-entrar"
    optional: true

- tapOn:
    text: "Entrar"
    optional: true

- extendedWaitUntil:
        visible:
            id: "customer-products-title"
        timeout: 45000

- assertVisible:
    id: "customer-products-title"
